--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.16.0
-  firebase_crashlytics: ^3.3.5
   get: ^4.6.5
-
+  translator: ^0.1.7
+  share_plus: ^7.1.0
+  flutter_tts: ^3.2.0
+  fluttertoast: ^8.2.2
+  shimmer: ^3.0.0
+  lottie: ^2.6.0
+  url_launcher: ^6.2.2
 
 dev_dependencies:
   flutter_test:
@@ -63,8 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/quotes_splash_logo.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
